--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,13 @@
     <script>
         function handleCredentialResponse(response) {
 
-            // console.log('id_token', response.credential);
-
             const body = { id_token: response.credential };
 
-            fetch('http://localhost:8080/api/auth/google', {
+            const currentURL = document.URL
+
+            console.log(currentURL);
+
+            fetch(`${currentURL}api/auth/google`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
